<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Story App</string>
    <string name="splash_screen">Let\'s The Story Begin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_page">Login</string>
    <string name="copyright">© 2023 Audi</string>
    <string name="create_account">Create account</string>
    <string name="register_page">Register</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="error_password">Character count should be at least 8</string>
    <string name="username_story">Audi</string>
    <string name="time_story">2022-01-08</string>
    <string name="desc_story">Lorem ipsum dolor sit amet.</string>
    <string name="upload">Upload</string>
    <string name="camera">camera</string>
    <string name="gallery">Gallery</string>
    <string name="list_page">Cohort Story</string>
    <string name="add_page">Add Story</string>
    <string name="detail_page">Detail Story</string>
    <string name="desc_hint">Description</string>
    <string name="theme">Set Your Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="on_notification">Turn On Notification</string>
    <string name="off_notification">Turn Off Notification</string>
    <string name="logout">Logout</string>
    <string name="alarm_message">There is an update on the Cohort Story. Check it out now!</string>
    <string name="language">Set Your Language</string>
    <string name="set_language">Change Language</string>
    <string name="email_invalid">Invalid email format</string>
    <string name="insert_name">Insert name</string>
    <string name="insert_email">Insert email</string>
    <string name="insert_pass">Insert password</string>
    <string name="regis_gagal">Registration Failed</string>
    <string name="regis_berhasil">Registration Success</string>
    <string name="regis_gagal_1">Sorry, there was an error creating your account. Please try again later.</string>
    <string name="regis_gagal_2">Sorry, your registration failed. Make sure all the information entered is correct and complete.</string>
    <string name="regis_berhasil_1">Congratulations! Your account has been successfully created. Please login to get started</string>
    <string name="login_gagal">Login Failed</string>
    <string name="login_gagal_1">Make sure Email and Password are filled in correctly</string>
    <string name="login_gagal_2">Sorry, your login failed. Make sure you have registered and entered the correct login information.</string>
    <string name="desc_require">Description must be filled</string>
    <string name="post_fail">Sorry, your post failed to be sent. Make sure you have filled in all the required fields.</string>
    <string name="post_fail_1">Failed to Send Post</string>
    <string name="post_fail_2">Sorry, your post failed to be sent. Please try again later.</string>
    <string name="post_success">Story Successfully Posted</string>
    <string name="post_success_1">Your post has been successfully sent!</string>
    <string name="extra_subject">Bangkit Cohort Story</string>
    <string name="hello">Hello,</string>
    <string name="menu_account">Account</string>
    <string name="account_page">Account</string>
    <string name="notification">Set Your Notification</string>
    <string name="retry">retry</string>
    <string name="maps">Map</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="menu_refresh">refresh</string>
    <string name="title_activity_detail_map">DetailMapActivity</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="location_failed">Your location is not accessible</string>
    <string name="detail_map">Detail Map</string>
    <string name="notifications_enabled">Notifications Enabled</string>
    <string name="notifications_disabled">Notifications Disabled</string>
    <string name="share_my_location">Share My Location</string>
</resources>