<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".view.account.AccountActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_title" />

    <TextView
        android:id="@+id/hello_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/hello"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/theme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/theme"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/theme_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/switch_theme"
        app:layout_constraintStart_toEndOf="@+id/switch_theme"
        app:layout_constraintTop_toTopOf="@+id/switch_theme" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_title" />

    <TextView
        android:id="@+id/theme_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/theme_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/switch_theme"
        app:layout_constraintEnd_toStartOf="@+id/switch_theme"
        app:layout_constraintTop_toTopOf="@+id/switch_theme" />

    <TextView
        android:id="@+id/notif_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/notification"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_theme" />

    <Button
        android:id="@+id/btn_set_repeating_alarm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/on_notification"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel_repeating_alarm"
        app:layout_constraintStart_toStartOf="@+id/theme_light"
        app:layout_constraintTop_toBottomOf="@+id/notif_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_cancel_repeating_alarm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/off_notification"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_set_repeating_alarm"
        app:layout_constraintTop_toBottomOf="@+id/notif_title"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/lang_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/language"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel_repeating_alarm" />

    <Button
        android:id="@+id/btn_set_language"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set_language"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/theme_light"
        app:layout_constraintTop_toBottomOf="@+id/lang_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>